--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
 # VITE_API_URL=http://localhost:5000/api
-VITE_API_URL=https://facebook8cl.vercel.app/
+VITE_API_URL=https://facebookb8.vercel.app/api
