--- a/backend/src/.env
+++ b/backend/src/.env
@@ -1,6 +1,6 @@
 PORT=5000
 # MONGO_URI=mongodb://localhost:27017/facebook-clone
-JWT_SECRET=binhdz
+JWT_SECRET=bin811dev
 JWT_EXPIRE=7d
-NODE_ENV=development
-MONGO_URI=mongodb+srv://binhbuidev:Z8LDPxAnr2Lyhfrs@facebook-cl.basw4n8.mongodb.net/facebook_clone?appName=facebook-cl
+NODE_ENV=production
+MONGO_URI=mongodb+srv://binhbuidev:Z8LDPxAnr2Lyhfrs@facebook-cl.basw4n8.mongodb.net/facebook_clone?retryWrites=true&w=majority
