--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,3 @@
 # VITE_API_URL=http://localhost:5000/api
-VITE_API_URL=https://facebookbc.vercel.app/api
+VITE_API_URL=https://facebookbbc.vercel.app/api
+
