feat(frontend): videocall, searchfriend, soketcontext

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,6 @@
 # VITE_API_URL=http://localhost:5000/api
 VITE_API_URL=https://facebookbbc.vercel.app/api
 
+# WebSocket server
+VITE_WS_URL=http://localhost:3001
+
